--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="box2 box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Personal Care</h2>
                 <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
                 <p><a>See More</a></p>
             </div>
@@ -179,4 +179,5 @@
         </div>
     </footer>
 </body>
+
 </html>
